[gd_scene load_steps=7 format=3 uid="uid://bx7afwf4meea2"]

[ext_resource type="Texture2D" uid="uid://du8rtit3v6hy" path="res://assets/images/NewBar.png" id="1_7v83k"]
[ext_resource type="Script" path="res://resources/upgrade_folder/upgrade_option.gd" id="1_ih4q1"]
[ext_resource type="Resource" uid="uid://lxndci4gsqod" path="res://resources/upgrade_folder/upgrades/NullUpgrade.tres" id="2_5rb71"]
[ext_resource type="Texture2D" uid="uid://d0oncnm36so0w" path="res://assets/images/NewOverBar.png" id="2_i2udh"]
[ext_resource type="Texture2D" uid="uid://lpurhkpp7nld" path="res://assets/images/Progress.png" id="3_ox14h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_haisr"]

[node name="UpgradeOption" type="Control"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ih4q1")
base_null_upgrade = ExtResource("2_5rb71")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="UpgradeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Upgrade Title"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureBar" type="TextureProgressBar" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 3.0
texture_under = ExtResource("1_7v83k")
texture_over = ExtResource("2_i2udh")
texture_progress = ExtResource("3_ox14h")
texture_progress_offset = Vector2(2, 7)

[node name="StatsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Status: 
{X} {y}"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_haisr")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DescriptionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "This is gonna upgrade your {x} in {x} {y} "
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_haisr")

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Buy for {X}c"

[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
